# ecg-research-copilot

./: .env.example  .gitignore  Makefile  PUBLIC_EXPORT_SUMMARY.md  README.md  SECURITY.md  docker-compose.yml  env.demo.example  env.full.example  verify_ecg.py
config/: schema_whitelist.yaml
docs/: ADDING_DRUG.md  PUBLIC_REPO_CHECKLIST.md
evals/: agent_fault_demo.py  agent_runner.py  (+8 more)
services/api/: .dockerignore  Dockerfile  pyproject.toml  test_local.py
services/api/app/: main.py
services/api/app/agent/: __init__.py  answer_writer.py  knowledge_base.py  plan_schema.py  planner.py  runner.py  tool_executor.py  tool_registry.py
services/api/app/core/: cohort_templates.py  config.py  ecg_task_queue.py  logging.py  report_task_queue.py  schema_whitelist.py  sql_safety.py
services/api/app/core/datasets/: reader.py
services/api/app/db/: base.py  models.py  session.py
services/api/app/routes/: agent.py  runs.py  tools.py
services/api/app/static/: index.html
services/api/app/static/agent/: index.html
services/api/tests/: conftest.py  test_agent_evals_config.py  test_agent_guardrails.py  test_agent_route.py  test_agent_runner.py  test_answer_writer.py  test_assemble_analysis_dataset.py  test_build_analysis_tables.py  test_build_report_plots.py  test_cohort_smoke.py  test_demo_report_and_worker_status.py  test_demo_report_e2e.py  test_ecg_feature_queue.py  test_ecg_pipeline_smoke.py  test_generate_report.py  test_generate_report_queue.py  test_knowledge_base.py  test_planner.py  test_run.py  test_sql_safety.py  test_tool_executor.py  test_ui_pages.py
(+28 files in other folders)
