[project]
name = "ecg-research-copilot-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "matplotlib>=3.10.8",
  "pandas>=3.0.1",
  "pillow>=12.1.1",
  "psycopg[binary]>=3.3.2",
  "pyarrow>=23.0.1",
  "pyyaml>=6.0.3",
  "scipy>=1.17.1",
  "sqlalchemy>=2.0.47",
  "sqlglot>=28.10.1",
  "uvicorn[standard]",
  "wfdb>=4.3.1",
]

[dependency-groups]
dev = [
  "pytest",
  "httpx",
  "ruff",
  "mypy",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
